fix emote menu header gap

--- a/src/modules/emote_menu/components/EmoteList.module.css
+++ b/src/modules/emote_menu/components/EmoteList.module.css
@@ -24,6 +24,7 @@
   justify-content: left;
   position: sticky;
   top: 0;
+  outline: 1px solid var(--mantine-color-body-secondary);
 }
 
 .headerIcon {
